--- a/template/login.html
+++ b/template/login.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wrapper">
 	<h1>Login</h1>		
 	<input type="email" ng-model="email" class="form-control text-center" placeholder="Email" >
 	<input type="password" ng-model="password" class="form-control text-center" placeholder="Password" >
