--- a/template/chat.html
+++ b/template/chat.html
@@ -1,20 +1,17 @@
-<form ng-focus="sendMessage()">
+<form ng-focus="sendMessage()" class="wrapper">
 	<h1>Current user: <a href='#/{{currentUser.displayName}}'>{{currentUser.info.firstName || currentUser.displayName}}</a></h1>
 	<a href='#/' ng-click="signOut()" class="btn text-center">Logout</a>
 	<input type="text" ng-model="messagePost" placeholder="Your Message Here" class="form-control text-center" id="message-box">
 	<input type="submit" value="Send" ng-click="sendMessage()" class="btn btn-default">
-	<div ng-repeat="day in messages | orderObjectBy:'date':true">
-		<span class="row">{{day.date}}</span>
-		<table class="table table-striped">
-			<tr ng-repeat="message in day | orderObjectBy:'dateMS':true | limitTo:quantity.default">		
-				<td><span>{{message.userInfo.firstName || message.displayName}} {{message.userInfo.lastName}}:</span></td>
-				<td><span ng-click="edit(day.date, message)" tooltip-placement="top" uib-tooltip="Click to edit"><b>{{message.message}}</b></span></td>
-				<td><span>{{message.dateText}}</span></td>
-				<td><button ng-click="remove(day.date, message)" class="btn btn-default">x</button></td>
-			</tr>			
-		</table>
-		<a href='' ng-click="quantity.getMore()" class="btn text-center">Show More</a>
-		<a href='' ng-click="quantity.getLess()" class="btn text-center" ng-hide="quantity.default <= 5">Show Less</a>
+	<div ng-repeat="day in messages | orderObjectBy:'date':true | limitTo:day.quantityDay" class="chat">
+		<div infinite-scroll='loadMore(day)'>
+			<h4><span class="row">{{day.date}}</span></h4>				
+				<dl ng-repeat="message in day | orderObjectBy:'dateMS':true | limitTo:day.quantityMessage">
+					<dd>{{message.userInfo.firstName || message.displayName}} {{message.userInfo.lastName}}</dd>
+					<dd ng-click="edit(day.date, message)"><span tooltip-placement="top" uib-tooltip="Click to edit">{{message.message}}</span></dd>
+					<dd>{{message.dateText}}</dd>	
+					<dd><button ng-click="remove(day.date, message)" class="btn btn-default">x</button></dd>		
+				</dl>
+		</div>
 	</div>
-
 </form>
